# asispectralinversion

./: .gitmodules  README.md  example_runscript.py  pyproject.toml  requirements.txt
src/asispectralinversion/: asi_gemini.py  asi_inversion_runscript.py  asispectralinversion_runscript.py  filing.py  gemini_mapping.py  inversion.py  preparation.py  preprocessing.py  transformation.py
src/glow_invert/: generate_tables.sh  glow_invert_airglow.f90  glow_invert_tables.f90  in.invert  makefile
