[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asispectralinversion"
version = "0.0.1"
authors = [
  { name="Alexander Mule", email="alexander.mule.gr@Dartmouth.edu" },
]
description = "Invert all-sky imagery to precipitation spectrum"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPLv3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "pandas",
    "pillow",
    "scikit-image",
    "skyfield",
    "apexpy",
    "PyWavelets",
    "importlib_resources>1.3; python_version < '3.10'"
]

[project.urls]
Homepage = "https://github.com/almule12/asispectralinversion"
Issues = "https://github.com/almule12/asispectralinversion/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asispectralinversion = ["skymap.mat"]
